--- a/ngtq/Cargo.toml
+++ b/ngtq/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "ngtask_queue"
+name = "ngtq"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ngtq = { path = "../ngtq" }
