--- a/ngtq_bus_service/Cargo.toml
+++ b/ngtq_bus_service/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 ngtask_queue = { path = "../ngtask_queue" }
+ngtq = { path = "../ngtq" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
