--- a/ngtq_integration_test/Cargo.toml
+++ b/ngtq_integration_test/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 ngtq_bus_service_client = { path = "../ngtq_bus_service_client"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+serial_test = "2.0.0"
