--- a/ngtq_bus_service_client/Cargo.toml
+++ b/ngtq_bus_service_client/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ngtq = { path = "../ngtq" }
+ngtq_bus_service_models = { path = "../ngtq_bus_service_models" }
