--- a/ngtq_bus_service/Cargo.toml
+++ b/ngtq_bus_service/Cargo.toml
@@ -9,3 +9,4 @@ ngtask_queue = { path = "../ngtask_queue" }
 ngtq_bus_service_models = { path = "../ngtq_bus_service_models" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "4.4", features = ["derive"] }
